[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://assets/entity_sprites/enemy1.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/platforms.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/shoot.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72, 56 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Boss" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-007, -64 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -64 )
shape = SubResource( 1 )

[node name="DieArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DieArea"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="KillArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( 0, -80 )
shape = SubResource( 3 )

[node name="Wall_sensor_right" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_sensor_right"]
position = Vector2( 64, -64 )
shape = SubResource( 4 )

[node name="Wall_sensor_left" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_sensor_left"]
position = Vector2( -64, -64 )
shape = SubResource( 4 )

[node name="AudioPlatforms" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="DieArea" to="." method="_on_DieArea_body_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="area_entered" from="Wall_sensor_right" to="." method="_on_Wall_sensor_right_area_entered"]
[connection signal="area_entered" from="Wall_sensor_left" to="." method="_on_Wall_sensor_left_area_entered"]
